<resources>
    <string name="app_name">HappyTail App</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="reco_title">Personalized Pet \nRecommendations</string>
    <string name="reco_text">Upon sign-up, you\'ll be asked to take a short suitability test. This questionnaire will help us understand your lifestyle, preferences, and living situation. Based on your responses, we\'ll recommend pets that best match your lifestyle and ensure a successful adoption journey.</string>
    <string name="adoption_title">Adoption and \nDonation</string>
    <string name="adoption_text">Discover and adopt adorable pets from rescue shelters with ease. Connect and initiate the adoption process in just a few taps. Even if you can\'t adopt now, you can still make a positive impact by supporting shelters through donations. .</string>
    <string name="blog_title">Blog Articles and \nPet Care Tips</string>
    <string name="blog_text">Stay informed with our pet-centric blog. Discover valuable insights and tips on pet care, training, health, and heartwarming adoption success stories. Ensure your pet\'s well-being and happiness, whether you\'re a first-time pet parent or an experienced animal lover. </string>
    <string name="next_symbol"><![CDATA[>]]></string>
    <string name="back_symbol"><![CDATA[<]]></string>
    <string name="let_s_get_started">Let\'s get started!</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="enter_full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="example_domain_com">example@domain.com</string>
    <string name="password">Password</string>
    <string name="pass_hint">********</string>
    <string name="login_subtitle">Welcome back! Enter your credentials to continue using the app.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="suitability_test">Suitability Test</string>
    <string name="a_time">A. Time</string>
    <string name="question1">How much free time do you have per week?</string>
    <string name="choice1">3-5 hours</string>
    <string name="choice2">6-8 hours</string>
    <string name="choice3">8-10 hours</string>
    <string name="choice4">10+ hours</string>
    <string name="complete">Complete</string>
    <string name="suitability_test_completed">Suitability Test \nCompleted</string>
    <string name="proceed_to_the_homepage">We hope you had a good time taking our suitability test. You can now browse our recommended pets for you or proceed to the homepage.</string>
    <string name="browse_recommended_pets">Browse Recommended Pets</string>
    <string name="homepage">Homepage</string>
    <string name="home">Home</string>
    <string name="all_pets">All Pets</string>
    <string name="shelters">Shelters</string>
    <string name="blogs">Blogs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recommended_pets_for_you">Recommended Pets for You</string>
    <string name="empty" />
    <string name="first_name">Juana</string>
    <string name="last_name">dela Cruz</string>
    <string name="user_status">Pending Appointment</string>
    <string name="location">Location</string>
    <string name="location_text">Manila, Philippines</string>
    <string name="good_morning_text">Good morning, Juana!</string>
    <string name="pets_near_you">Pets Near You</string>
    <string name="young">Young</string>
    <string name="max">Max</string>
    <string name="_0_5km_away">0.5km away</string>
    <string name="view_all_pets">View All Pets</string>
    <string name="not_exactly_what_you_re_looking_for">Not exactly what you\'re looking for?</string>
    <string name="help_out_rescue_shelters">Help Out Rescue Shelters</string>
    <string name="sinagtala_shelter">Sinagtala Shelter</string>
    <string name="de_kattenkliniek">De KattenKliniek</string>
</resources>