<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SuitabilityTest">

    <TextView
        android:id="@+id/suitabilityTestTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/suitability_test"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:background="@drawable/round_rectangle_button"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/secondary_teal"
        app:layout_constraintBottom_toBottomOf="@+id/suitabilityTestTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/suitabilityTestTitle"
        app:layout_constraintTop_toTopOf="@+id/suitabilityTestTitle" />

    <TextView
        android:id="@+id/stepIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="1 out of 10"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suitabilityTestTitle" />

    <ProgressBar
        android:id="@+id/stepProgress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleY="3.0"
        android:progressBackgroundTint="@color/indicator_inactive"
        android:progressTint="@color/accent_yellow"
        android:progress="10"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepIndicator" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/half_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepProgress" />

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_time"
        android:fontFamily="@font/sourcesanspro_bold"
        android:textColor="@color/primary_blue"
        android:textSize="22sp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <ImageView
        android:id="@+id/questionIcon"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintStart_toStartOf="@+id/questionTitle"
        app:layout_constraintTop_toBottomOf="@+id/questionTitle" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/sourcesanspro_bold"
        android:text="@string/question1"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/questionIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/questionIcon"
        app:layout_constraintTop_toTopOf="@+id/questionIcon" />

    <LinearLayout
        android:id="@+id/radioButtonLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioGroup
            android:id="@+id/choicesHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <RadioButton
                android:id="@+id/choice1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/choice1"
                android:textColor="@drawable/custom_radio_text"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:buttonTint="@drawable/custom_radio_text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="15dp"
                android:checked="true"
                android:background="@drawable/custom_radio_button"/>

            <RadioButton
                android:id="@+id/choice2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/choice2"
                android:textColor="@drawable/custom_radio_text"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:buttonTint="@drawable/custom_radio_text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_radio_button" />

            <RadioButton
                android:id="@+id/choice3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/choice3"
                android:textColor="@drawable/custom_radio_text"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:buttonTint="@drawable/custom_radio_text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_radio_button" />

            <RadioButton
                android:id="@+id/choice4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/sourcesanspro_regular"
                android:text="@string/choice4"
                android:textColor="@drawable/custom_radio_text"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:buttonTint="@drawable/custom_radio_text"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_radio_button" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/nextButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/round_rectangle_button"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>