<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="454dp"
        android:src="@drawable/welcome_page"
        android:scaleY="1.15"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="248dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/let_s_get_started"
        android:textColor="@color/primary_blue"
        android:textSize="32sp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:background="@drawable/round_rectangle_button"
        app:backgroundTint="@color/accent_orange"
        android:fontFamily="@font/sourcesanspro_bold"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <LinearLayout
        android:id="@+id/welcomeLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="40dp"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="@+id/signupButton"
        app:layout_constraintStart_toStartOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupButton">

        <TextView
            android:id="@+id/accountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textSize="16sp"
            android:textColor="@color/primary_blue"
            android:textAlignment="center" />

        <Button
            android:id="@+id/loginPageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:fontFamily="@font/sourcesanspro_bold"
            android:minWidth="48dp"
            android:text="@string/login"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/accent_orange"
            android:textSize="16sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>