<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".TestComplete">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="350dp"
        android:background="@drawable/half_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/suitability_test_completed"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/proceed_to_the_homepage"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/recommendedButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/round_rectangle_button"
        android:fontFamily="@font/sourcesanspro_bold"
        android:text="@string/browse_recommended_pets"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/accent_orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/homepageButton"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/round_rectangle_button"
        android:fontFamily="@font/sourcesanspro_bold"
        android:text="@string/homepage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="@color/secondary_teal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recommendedButton" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView3">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="380dp"
            android:src="@drawable/animal_dog8" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>