<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">

    <ImageView
        android:id="@+id/backdrop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleX="1.1"
        android:scaleY="1.2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/backdrop1" />

    <ImageView
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/animal_cat1"
        app:layout_constraintBottom_toBottomOf="@+id/backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/login"
        android:textColor="@color/primary_blue"
        android:textSize="32sp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backdrop" />

    <TextView
        android:id="@+id/loginSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginVertical="10dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/login_subtitle"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginSubtitle" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@null"
        android:background="@drawable/input_text"
        android:fontFamily="@font/sourcesanspro_regular"
        android:hint="@string/example_domain_com"
        android:textColorHint="@color/indicator_inactive"
        android:inputType="textEmailAddress"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/emailTitle"
        app:layout_constraintTop_toBottomOf="@+id/emailTitle" />

    <TextView
        android:id="@+id/passwordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/sourcesanspro_regular"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/sourcesanspro_regular"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:hintEnabled="false"
        app:layout_constraintStart_toEndOf="@+id/passwordTitle"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/accent_orange">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/Password1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/input_text"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="25dp"
            android:paddingTop="0dp"
            android:paddingEnd="0dp"
            android:paddingBottom="2dp"
            android:textColorHint="@color/indicator_inactive"
            android:textSize="15sp"
            android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/round_rectangle_button"
        android:fontFamily="@font/sourcesanspro_bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        app:backgroundTint="@color/accent_orange"
        app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
        app:layout_constraintStart_toStartOf="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <LinearLayout
        android:id="@+id/signupLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">

        <TextView
            android:id="@+id/accountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sourcesanspro_regular"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/primary_blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signupPageButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:background="@null"
            android:fontFamily="@font/sourcesanspro_bold"
            android:minWidth="48dp"
            android:text="@string/sign_up"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@color/accent_orange"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>