<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical ="10dp"
    android:layout_marginEnd="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/petCategoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/young"
        android:fontFamily="@font/sourcesanspro_regular"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:paddingVertical="1dp"
        android:paddingHorizontal="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/round_rectangle_button"
        android:backgroundTint="@color/accent_orange"
        android:elevation="8dp" />

    <ImageView
        android:id="@+id/petPictureHolder"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="15dp"
        android:layout_below="@id/petCategoryText"
        android:src="@drawable/pet_max"
        android:elevation="6dp"/>
    

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/petPictureHolder"
        android:elevation="8dp"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/petGenderImg"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:src="@drawable/ic_baseline_female_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/petName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textAlignment="viewStart"
            app:layout_constraintStart_toEndOf="@id/petGenderImg"
            app:layout_constraintTop_toTopOf="@id/petGenderImg"
            app:layout_constraintBottom_toBottomOf="@id/petGenderImg"/>

        <TextView
            android:id="@+id/petLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_5km_away"
            android:fontFamily="@font/sourcesanspro_regular"
            android:textColor="@color/indicator_inactive"
            android:textSize="12sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="@id/petGenderImg"
            app:layout_constraintTop_toBottomOf="@id/petGenderImg" />

        <Button
            android:id="@+id/adoptButton"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:background="@drawable/heart"
            android:backgroundTint="@color/white"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="@id/buttonBg"
            app:layout_constraintEnd_toEndOf="@id/buttonBg"
            app:layout_constraintStart_toStartOf="@id/buttonBg"
            app:layout_constraintTop_toTopOf="@id/buttonBg"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <View
            android:id="@+id/buttonBg"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:background="@drawable/circle"
            android:backgroundTint="@color/secondary_teal"
            android:elevation="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/bgCard"
        android:layout_width="160dp"
        android:layout_height="230dp"
        android:background="@drawable/round_rectangle_button"
        android:backgroundTint="@color/card_cream"
        android:elevation="2dp" />

    <View
        android:layout_width="160dp"
        android:layout_height="52dp"
        android:background="@drawable/half_rectangle_bottom"
        android:layout_below="@id/petPictureHolder"
        android:elevation="3dp" />

</RelativeLayout>